OP-171 #comment Added new fields HGT, Diuresis and Bowel
and moved Notes panel to the right

--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -296,6 +296,8 @@ angal.common.uom.celsius                                                        
 angal.common.uom.centimeter                                                      = cm
 angal.common.uom.kg                                                              = Kg
 angal.common.uom.meter                                                           = m
+angal.common.uom.mgdl                                                            = mg/dl
+angal.common.uom.milliliter                                                      = ml
 angal.common.uom.mmHg                                                            = mmHg
 angal.common.uom.percentage                                                      = %
 angal.dicom.delete.no                                                            = لا
@@ -412,20 +414,35 @@ angal.examination.bmi.obesityclassilight                                        
 angal.examination.bmi.overweight                                                 = زيادة وزن
 angal.examination.bmi.severeunderweight                                          = نقصان وزن حاد
 angal.examination.bmi.underweight                                                = نقصان وزن
+angal.examination.bowel                                                          = Bowel
+angal.examination.bowel.constipation                                             = الإمساك
+angal.examination.bowel.diarrheal                                                = الإسهال
+angal.examination.bowel.irregular                                                = غير عادي
+angal.examination.bowel.regular                                                  = منتظم
+angal.examination.diuresis                                                       = إدرار البول
+angal.examination.diuresis.anuria                                                = انقطاع البول
+angal.examination.diuresis.frequent                                              = Pollakiuria
+angal.examination.diuresis.hematuria                                             = بول دموي
+angal.examination.diuresis.nocturia                                              = Nocturia
+angal.examination.diuresis.oliguria                                              = قلة البول
+angal.examination.diuresis.physiological                                         = فسيولوجي
+angal.examination.diuresis.pyuria                                                = بيلة قيحية
+angal.examination.diuresis.stranguria                                            = تقطير
 angal.examination.heartrate                                                      = نبض القلب
 angal.examination.heartrateabbr                                                  = HR
 angal.examination.height                                                         = ارتفاع
 angal.examination.heightabbr                                                     = (H)
+angal.examination.hemoglucosetest                                                = Hemo Glucose Test
+angal.examination.hgt                                                            = HGT
 angal.examination.note                                                           = شكوى
+angal.examination.pleaseinsertavalidboweldescription                             = الرجاء إدخال وصف صالح للأمعاء
+angal.examination.pleaseinsertavaliddiuresisdescription                          = يرجى إدخال وصف إدرار البول صالح
 angal.examination.saturation                                                     = اشباع
 angal.examination.saturationabbr                                                 = O2
 angal.examination.temperature                                                    = حرارة
 angal.examination.temperatureabbr                                                = T
 angal.examination.tooltip.savepatientexamination                                 = احفظ اختبار المريض
-angal.examination.tooltip.togglearterialpressureexamination                      = تفعيل  تعطيل اختبار ضغط الدم
-angal.examination.tooltip.toggleheartrateexamination                             = تفعيل  تعطيل اختبار نبض القلب
-angal.examination.tooltip.togglesaturationexamination                            = تفعيل  تعطيل اختبار الاشباع
-angal.examination.tooltip.toggletemperatureexamination                           = تفعيل  تعطيل اختبار الحرارة
+angal.examination.tooltip.toggleexamination                                      = تمكين / تعطيل الفحص
 angal.examination.weight                                                         = الوزن
 angal.examination.weightabbr                                                     = (W)
 angal.exams.find                                                                 = بحث
