--- a/bundle/language_de.properties
+++ b/bundle/language_de.properties
@@ -296,6 +296,8 @@ angal.common.uom.celsius                                                        
 angal.common.uom.centimeter                                                      = cm
 angal.common.uom.kg                                                              = Kg
 angal.common.uom.meter                                                           = m
+angal.common.uom.mgdl                                                            = mg/dl
+angal.common.uom.milliliter                                                      = ml
 angal.common.uom.mmHg                                                            = mmHg
 angal.common.uom.percentage                                                      = %
 angal.dicom.delete.no                                                            = Nein
@@ -412,20 +414,35 @@ angal.examination.bmi.obesityclassilight                                        
 angal.examination.bmi.overweight                                                 = Overweight
 angal.examination.bmi.severeunderweight                                          = Severe Underweight
 angal.examination.bmi.underweight                                                = Underweight
+angal.examination.bowel                                                          = Bowel
+angal.examination.bowel.constipation                                             = Verstopfung
+angal.examination.bowel.diarrheal                                                = Durchfall
+angal.examination.bowel.irregular                                                = Irregular
+angal.examination.bowel.regular                                                  = Regulär
+angal.examination.diuresis                                                       = Diuresis
+angal.examination.diuresis.anuria                                                = Anurie
+angal.examination.diuresis.frequent                                              = Pollakiuria
+angal.examination.diuresis.hematuria                                             = Hämaturie
+angal.examination.diuresis.nocturia                                              = Nykturie
+angal.examination.diuresis.oliguria                                              = Oligurien
+angal.examination.diuresis.physiological                                         = Physiologisch
+angal.examination.diuresis.pyuria                                                = Pyurie
+angal.examination.diuresis.stranguria                                            = Stranguria
 angal.examination.heartrate                                                      = Heart Rate
 angal.examination.heartrateabbr                                                  = HR
 angal.examination.height                                                         = Größe
 angal.examination.heightabbr                                                     = (Gr)
+angal.examination.hemoglucosetest                                                = Hämo-Glukosetest
+angal.examination.hgt                                                            = HGT
 angal.examination.note                                                           = Complain
+angal.examination.pleaseinsertavalidboweldescription                             = Bitte geben Sie eine gültige Beschreibung für den Darm ein
+angal.examination.pleaseinsertavaliddiuresisdescription                          = Bitte geben Sie eine gültige Diuresis-Beschreibung ein
 angal.examination.saturation                                                     = Sättigung
 angal.examination.saturationabbr                                                 = O2
 angal.examination.temperature                                                    = Temperatur
 angal.examination.temperatureabbr                                                = T
 angal.examination.tooltip.savepatientexamination                                 = Save Patient Examination
-angal.examination.tooltip.togglearterialpressureexamination                      = Enable / Disable examination Blood Pressure
-angal.examination.tooltip.toggleheartrateexamination                             = Enable / Disable examination Heart Rate
-angal.examination.tooltip.togglesaturationexamination                            = Enable / Disable examination Saturation
-angal.examination.tooltip.toggletemperatureexamination                           = Enable / Disable examination Temperature
+angal.examination.tooltip.toggleexamination                                      = Prüfung aktivieren / deaktivieren
 angal.examination.weight                                                         = Gewicht
 angal.examination.weightabbr                                                     = (Ge)
 angal.exams.find                                                                 = Suche
