--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -296,6 +296,8 @@ angal.common.uom.celsius                                                        
 angal.common.uom.centimeter                                                      = cm
 angal.common.uom.kg                                                              = Kg
 angal.common.uom.meter                                                           = m
+angal.common.uom.mgdl                                                            = mg/dl
+angal.common.uom.milliliter                                                      = ml
 angal.common.uom.mmHg                                                            = mmHg
 angal.common.uom.percentage                                                      = %
 angal.dicom.delete.no                                                            = No
@@ -412,20 +414,35 @@ angal.examination.bmi.obesityclassilight                                        
 angal.examination.bmi.overweight                                                 = Sovrappeso
 angal.examination.bmi.severeunderweight                                          = Sottopeso Grave
 angal.examination.bmi.underweight                                                = Sottopeso
+angal.examination.bowel                                                          = Alvo
+angal.examination.bowel.constipation                                             = Stipsi
+angal.examination.bowel.diarrheal                                                = Diarroico
+angal.examination.bowel.irregular                                                = Irregolare
+angal.examination.bowel.regular                                                  = Regolare
+angal.examination.diuresis                                                       = Diuresi
+angal.examination.diuresis.anuria                                                = Anuria
+angal.examination.diuresis.frequent                                              = Pollachiuria
+angal.examination.diuresis.hematuria                                             = Ematuria
+angal.examination.diuresis.nocturia                                              = Nocturia
+angal.examination.diuresis.oliguria                                              = Oliguria
+angal.examination.diuresis.physiological                                         = Fisiologica
+angal.examination.diuresis.pyuria                                                = Piuria
+angal.examination.diuresis.stranguria                                            = Stranguria
 angal.examination.heartrate                                                      = Frequenza Cardiaca
 angal.examination.heartrateabbr                                                  = FC
 angal.examination.height                                                         = Altezza
 angal.examination.heightabbr                                                     = (A)
+angal.examination.hemoglucosetest                                                = Hemo Glucose Test
+angal.examination.hgt                                                            = HGT
 angal.examination.note                                                           = Note
+angal.examination.pleaseinsertavalidboweldescription                             = Prego inserire una descrizione di Alvo valida
+angal.examination.pleaseinsertavaliddiuresisdescription                          = Prego inserire una descrizione di Diuresi valida
 angal.examination.saturation                                                     = Saturazione
 angal.examination.saturationabbr                                                 = O2
 angal.examination.temperature                                                    = Temperatura
 angal.examination.temperatureabbr                                                = T
 angal.examination.tooltip.savepatientexamination                                 = Salva esame
-angal.examination.tooltip.togglearterialpressureexamination                      = Attiva / Disattiva esame Pressione Arteriosa
-angal.examination.tooltip.toggleheartrateexamination                             = Attiva / Disattiva esame Frequenza Cardiaca
-angal.examination.tooltip.togglesaturationexamination                            = Attiva / Disattiva esame Saturazione
-angal.examination.tooltip.toggletemperatureexamination                           = Attiva / Disattiva esame Temperatura
+angal.examination.tooltip.toggleexamination                                      = Attiva / Disattiva esame
 angal.examination.weight                                                         = Peso
 angal.examination.weightabbr                                                     = (P)
 angal.exams.find                                                                 = Cerca
