--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -296,6 +296,8 @@ angal.common.uom.celsius                                                        
 angal.common.uom.centimeter                                                      = cm
 angal.common.uom.kg                                                              = Kg
 angal.common.uom.meter                                                           = m
+angal.common.uom.mgdl                                                            = mg/dl
+angal.common.uom.milliliter                                                      = ml
 angal.common.uom.mmHg                                                            = mmHg
 angal.common.uom.percentage                                                      = %
 angal.dicom.delete.no                                                            = No
@@ -412,20 +414,35 @@ angal.examination.bmi.obesityclassilight                                        
 angal.examination.bmi.overweight                                                 = Overweight
 angal.examination.bmi.severeunderweight                                          = Severe Underweight
 angal.examination.bmi.underweight                                                = Underweight
+angal.examination.bowel                                                          = Bowel
+angal.examination.bowel.constipation                                             = Constipation
+angal.examination.bowel.diarrheal                                                = Diarrheal
+angal.examination.bowel.irregular                                                = Irregular
+angal.examination.bowel.regular                                                  = Regular
+angal.examination.diuresis                                                       = Diuresis
+angal.examination.diuresis.anuria                                                = Anuria
+angal.examination.diuresis.frequent                                              = Pollakiuria
+angal.examination.diuresis.hematuria                                             = Hematuria
+angal.examination.diuresis.nocturia                                              = Nocturia
+angal.examination.diuresis.oliguria                                              = Oliguria
+angal.examination.diuresis.physiological                                         = Physiological
+angal.examination.diuresis.pyuria                                                = Pyuria
+angal.examination.diuresis.stranguria                                            = Stranguria
 angal.examination.heartrate                                                      = Heart Rate
 angal.examination.heartrateabbr                                                  = HR
 angal.examination.height                                                         = Height
 angal.examination.heightabbr                                                     = (H)
+angal.examination.hemoglucosetest                                                = Hemo Glucose Test
+angal.examination.hgt                                                            = HGT
 angal.examination.note                                                           = Complain
+angal.examination.pleaseinsertavalidboweldescription                             = Please insert a valid Bowel description
+angal.examination.pleaseinsertavaliddiuresisdescription                          = Please insert a valid Diuresis description
 angal.examination.saturation                                                     = Saturation
 angal.examination.saturationabbr                                                 = O2
 angal.examination.temperature                                                    = Temperature
 angal.examination.temperatureabbr                                                = T
 angal.examination.tooltip.savepatientexamination                                 = Save Patient Examination
-angal.examination.tooltip.togglearterialpressureexamination                      = Enable / Disable examination Blood Pressure
-angal.examination.tooltip.toggleheartrateexamination                             = Enable / Disable examination Heart Rate
-angal.examination.tooltip.togglesaturationexamination                            = Enable / Disable examination Saturation
-angal.examination.tooltip.toggletemperatureexamination                           = Enable / Disable examination Temperature
+angal.examination.tooltip.toggleexamination                                      = Enable / Disable examination
 angal.examination.weight                                                         = Weight
 angal.examination.weightabbr                                                     = (W)
 angal.exams.find                                                                 = Search
