--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -296,6 +296,8 @@ angal.common.uom.celsius                                                        
 angal.common.uom.centimeter                                                      = cm
 angal.common.uom.kg                                                              = Kg
 angal.common.uom.meter                                                           = m
+angal.common.uom.mgdl                                                            = mg/dl
+angal.common.uom.milliliter                                                      = ml
 angal.common.uom.mmHg                                                            = mmHg
 angal.common.uom.percentage                                                      = %
 angal.dicom.delete.no                                                            = Não
@@ -412,20 +414,35 @@ angal.examination.bmi.obesityclassilight                                        
 angal.examination.bmi.overweight                                                 = Excesso de peso
 angal.examination.bmi.severeunderweight                                          = Gravemente abaixo do peso
 angal.examination.bmi.underweight                                                = Abaixo do Peso
+angal.examination.bowel                                                          = Bowel
+angal.examination.bowel.constipation                                             = Constipação
+angal.examination.bowel.diarrheal                                                = Diarrheal
+angal.examination.bowel.irregular                                                = Irregular
+angal.examination.bowel.regular                                                  = Regular
+angal.examination.diuresis                                                       = Diurese
+angal.examination.diuresis.anuria                                                = Anúria
+angal.examination.diuresis.frequent                                              = Pollakiuria
+angal.examination.diuresis.hematuria                                             = Hematúria
+angal.examination.diuresis.nocturia                                              = Noctúria
+angal.examination.diuresis.oliguria                                              = Oliguria
+angal.examination.diuresis.physiological                                         = Fisiológica
+angal.examination.diuresis.pyuria                                                = Piúria
+angal.examination.diuresis.stranguria                                            = Stranguria
 angal.examination.heartrate                                                      = Ritmo Cardíaco
 angal.examination.heartrateabbr                                                  = RC
 angal.examination.height                                                         = Altura
 angal.examination.heightabbr                                                     = (P)
+angal.examination.hemoglucosetest                                                = Hemo Glucose Test
+angal.examination.hgt                                                            = HGT
 angal.examination.note                                                           = Sintoma
+angal.examination.pleaseinsertavalidboweldescription                             = Por favor, insira uma descrição válida para o intestino
+angal.examination.pleaseinsertavaliddiuresisdescription                          = Insira uma descrição válida da diurese
 angal.examination.saturation                                                     = Saturação
 angal.examination.saturationabbr                                                 = O2
 angal.examination.temperature                                                    = Temperatura
 angal.examination.temperatureabbr                                                = T
 angal.examination.tooltip.savepatientexamination                                 = Gravar o registo de exame do paciente
-angal.examination.tooltip.togglearterialpressureexamination                      = Activar / Disa ctivar o exame de Pressão Arterial
-angal.examination.tooltip.toggleheartrateexamination                             = Activar / Desactivar exame ao Rítmo Cardíaco
-angal.examination.tooltip.togglesaturationexamination                            = Activar / Desactivar exame de Temperatura
-angal.examination.tooltip.toggletemperatureexamination                           = Ativar / desativar o exame temperatura
+angal.examination.tooltip.toggleexamination                                      = Ativar / desativar o exame
 angal.examination.weight                                                         = Peso
 angal.examination.weightabbr                                                     = (W).
 angal.exams.find                                                                 = Procuração
