--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -296,6 +296,8 @@ angal.common.uom.celsius                                                        
 angal.common.uom.centimeter                                                      = cm
 angal.common.uom.kg                                                              = Kg
 angal.common.uom.meter                                                           = m
+angal.common.uom.mgdl                                                            = mg/dl
+angal.common.uom.milliliter                                                      = ml
 angal.common.uom.mmHg                                                            = mmHg
 angal.common.uom.percentage                                                      = %
 angal.dicom.delete.no                                                            = Hapana
@@ -412,20 +414,35 @@ angal.examination.bmi.obesityclassilight                                        
 angal.examination.bmi.overweight                                                 = Uzito Kuzidi
 angal.examination.bmi.severeunderweight                                          = Uzito pungufu kali
 angal.examination.bmi.underweight                                                = Uzito pungufu
+angal.examination.bowel                                                          = Bowel
+angal.examination.bowel.constipation                                             = Kumeza
+angal.examination.bowel.diarrheal                                                = Mchanganyiko
+angal.examination.bowel.irregular                                                = Irregular
+angal.examination.bowel.regular                                                  = Kawaida
+angal.examination.diuresis                                                       = Diuresis
+angal.examination.diuresis.anuria                                                = Anuria
+angal.examination.diuresis.frequent                                              = Pollakiuria
+angal.examination.diuresis.hematuria                                             = Hematuria
+angal.examination.diuresis.nocturia                                              = Nocturia
+angal.examination.diuresis.oliguria                                              = Oliguria
+angal.examination.diuresis.physiological                                         = Kisaikolojia
+angal.examination.diuresis.pyuria                                                = Pyuria
+angal.examination.diuresis.stranguria                                            = Stranguria
 angal.examination.heartrate                                                      = Kiwango cha Moyo
 angal.examination.heartrateabbr                                                  = KM
 angal.examination.height                                                         = Urefu
 angal.examination.heightabbr                                                     = (U)
+angal.examination.hemoglucosetest                                                = Hemo Glucose Test
+angal.examination.hgt                                                            = HGT
 angal.examination.note                                                           = Malalamiko
+angal.examination.pleaseinsertavalidboweldescription                             = Tafadhali ingiza maelezo halali ya matumbo
+angal.examination.pleaseinsertavaliddiuresisdescription                          = Tafadhali ingiza maelezo halali ya Diuresis
 angal.examination.saturation                                                     = Kueneza
 angal.examination.saturationabbr                                                 = O2
 angal.examination.temperature                                                    = Joto
 angal.examination.temperatureabbr                                                = J
 angal.examination.tooltip.savepatientexamination                                 = Hifadhi Uchunguzi wa Mgonjwa
-angal.examination.tooltip.togglearterialpressureexamination                      = Wezesha / Lemaza uchunguzi Shinikizo la Damu
-angal.examination.tooltip.toggleheartrateexamination                             = Wezesha / Lemaza uchunguzi Kiwango cha Moyo
-angal.examination.tooltip.togglesaturationexamination                            = Wezesha / Lemaza uchunguzi Uloweshaji
-angal.examination.tooltip.toggletemperatureexamination                           = Wezesha / Lemaza uchunguzi Joto
+angal.examination.tooltip.toggleexamination                                      = Washa / Lemaza uchunguzi
 angal.examination.weight                                                         = Uzito
 angal.examination.weightabbr                                                     = (U)
 angal.exams.find                                                                 = Tafuta
