Added 'undefined' default material

--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -502,6 +502,7 @@ angal.lab.stool                                                                 
 angal.lab.swabs                                                                  = Tampón
 angal.lab.tissues                                                                = Tejidos
 angal.lab.to                                                                     = A
+angal.lab.undefined                                                              = Indefinido
 angal.lab.unknownprocedure                                                       = Procedimiento desconocido
 angal.lab.urine                                                                  = Orina
 angal.labnew.changepatient                                                       = Cambiar Paciente
