--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -502,6 +502,7 @@ angal.lab.stool                                                                 
 angal.lab.swabs                                                                  = Tampou
 angal.lab.tissues                                                                = Tissus
 angal.lab.to                                                                     = á
+angal.lab.undefined                                                              = Indéfini
 angal.lab.unknownprocedure                                                       = Procédure inconnue
 angal.lab.urine                                                                  = Urine
 angal.labnew.changepatient                                                       = Changez Patient
