--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -502,6 +502,7 @@ angal.lab.stool                                                                 
 angal.lab.swabs                                                                  = Tampone
 angal.lab.tissues                                                                = Tessuti
 angal.lab.to                                                                     = A
+angal.lab.undefined                                                              = Non definito
 angal.lab.unknownprocedure                                                       = Procedura sconosciuta
 angal.lab.urine                                                                  = Urina
 angal.labnew.changepatient                                                       = Cambia Paziente
