--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -502,6 +502,7 @@ angal.lab.stool                                                                 
 angal.lab.swabs                                                                  = Panguza
 angal.lab.tissues                                                                = Karatasi ya chooni
 angal.lab.to                                                                     = kwa
+angal.lab.undefined                                                              = Haijafafanuliwa
 angal.lab.unknownprocedure                                                       = Utaratibu usiojulikana
 angal.lab.urine                                                                  = Mkojo
 angal.labnew.changepatient                                                       = Badilisha Mgonjwa
