ADWA_4_Daily_Worksheet_for_Services: new Version of the interface

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -857,7 +857,7 @@ angal.menu.billsmanager                                                         
 angal.menu.btn.accounting                                                        = Accounting
 angal.menu.btn.admchart                                                          = Admission Chart
 angal.menu.btn.admission                                                         = Admission/Patient
-angal.menu.btn.visits                                                            = Visits
+angal.menu.btn.worksheet                                                         = Worksheet
 angal.menu.btn.admtype                                                           = Admission Type
 angal.menu.btn.agetype                                                           = Age Type
 angal.menu.btn.billsmanager                                                      = Bills manager
@@ -1012,7 +1012,7 @@ angal.menu.usersbrowser                                                         
 angal.menu.usersusers                                                            = Users
 angal.menu.vaccine                                                               = Vaccine
 angal.menu.vaccinetype                                                           = Vaccine Type
-angal.menu.visits                                                                = Visits
+angal.menu.worksheet                                                             = Worksheet
 angal.menu.ward                                                                  = Ward
 angal.menu.youcantdeleteadminuser                                                = You can't delete 'admin' user
 angal.menu.youcantdeletegroupadmin                                               = You can't delete 'admin' user
@@ -1631,7 +1631,7 @@ angal.video.setfullscreen                                                       
 angal.video.shootaphoto                                                          = Take a picture
 angal.visit.reminderm                                                            = REMINDER
 angal.visit.visitfor                                                             = Visits for
-angal.visit.visittoday                                                           = Visits Today
+angal.visit.visittoday                                                           = Print this day's visits
 angal.visit.visittomorrow                                                        = Visits Tomorrow
 angal.ward.beds                                                                  = BEDS
 angal.ward.bedsedit                                                              = Number of beds *
