ADWA_5_Precise_value_in_exams'_results: implemented like Shiré branch

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -150,6 +150,7 @@ angal.admission.pleaseselectavaliddiseasein                                     
 angal.admission.pleaseselectavalidward                                           = Please select a valid ward
 angal.admission.pleaseselectthefinalname                                         = Please select the final name
 angal.admission.pleaseselecttwopatients                                          = Please select two patients
+angal.admission.pleaseselectpatient                                       		 = Please select patient
 angal.admission.poor                                                             = Poor
 angal.admission.positive                                                         = Positive
 angal.admission.present                                                          = present
