Fixed problem with dates in Operation data

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -191,7 +191,10 @@ angal.admission.weneed                                                          
 angal.admission.willbedeletedandhisherhistorytransferedtothepatient              = will be deleted and his/her history transfered to the Patient
 angal.admission.withthisoperationthepatient                                      = With this operation the Patient
 angal.admission.youareeditinganoldadmission                                      = You are editing an old admission
-angal.admition.check.operationdate                                               = Please check the operation Date
+angal.admission.check.operationdate                                               = Please check the operations dates
+angal.admission.invalidoperationdate                                             = Invalid operation date:
+angal.admission.theoperationdatebetween                                          = the operation date must be between
+angal.admission.theoperationdatenewerthan                                        = the operation date must be more recent than
 angal.admtype.admissiontypebrowsing                                              = Admission type browsing
 angal.admtype.codemaxchars                                                       = Code (max 10 chars)
 angal.admtype.codetoolongmaxchars                                                = Code too long (max 10 chars)
