--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -188,7 +188,10 @@ angal.admission.weneed                                                          
 angal.admission.willbedeletedandhisherhistorytransferedtothepatient              = Sera eliminado y su Historia trasferido al Paciente
 angal.admission.withthisoperationthepatient                                      = Con esta operación el Paciente
 angal.admission.youareeditinganoldadmission                                      = Modificando una anterior hospitalización
-angal.admition.check.operationdate                                               = Por favor verifique la fecha de la intervención
+angal.admission.check.operationdate                                               = Por favor verifique la fecha de la intervención
+angal.admission.invalidoperationdate                                             = Fecha de operación inválida:
+angal.admission.theoperationdatebetween                                          = la fecha de la operación debe estar entre
+angal.admission.theoperationdatenewerthan                                        = la fecha de la operación debe ser más reciente que
 angal.admtype.admissiontypebrowsing                                              = Lista tipologías de hospitalización
 angal.admtype.codemaxchars                                                       = Código (máx. 10 caracteres)
 angal.admtype.codetoolongmaxchars                                                = Código muy largo (máx. 10 caracteres)
