--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -189,7 +189,10 @@ angal.admission.weneed                                                          
 angal.admission.willbedeletedandhisherhistorytransferedtothepatient              = verrà eliminato ed il suo storico trasferito al Paziente
 angal.admission.withthisoperationthepatient                                      = Con questa operazione il Paziente
 angal.admission.youareeditinganoldadmission                                      = Stai modificando un vecchio ricovero
-angal.admition.check.operationdate                                               = Per favore, controlla la data della/delle operazione/i
+angal.admission.check.operationdate                                               = Per favore, controlla la data della/delle operazione/i
+angal.admission.invalidoperationdate                                             = Data di funzionamento non valida:
+angal.admission.theoperationdatebetween                                          = la data di operazione deve essere compresa tra
+angal.admission.theoperationdatenewerthan                                        = la data di operazione deve essere più recente di
 angal.admtype.admissiontypebrowsing                                              = Lista tipologie ricovero
 angal.admtype.codemaxchars                                                       = Codice (max 10 caratteri)
 angal.admtype.codetoolongmaxchars                                                = Codice troppo lungo (max 10 caratteri)
