print labels buttons added

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -515,6 +515,7 @@ angal.labnew.pickpatient                                                        
 angal.labnew.pleaseinsertadate                                                   = Please insert a date.
 angal.labnew.pleaseselectanexam                                                  = Please select an Exam
 angal.labnew.pleaseselectapatient                                                = Please select a Patient
+angal.labnew.printlabel                                               			 = Print Label
 angal.labnew.remove                                                              = Remove
 angal.labnew.result                                                              = Result
 angal.labnew.selectamaterial                                                     = Select a Material
