Op 183 problem with dates in operation data (#68)
* Fixed problem with dates in Operation data
Co-authored-by: Xavier <martinxaviertchembe@gmail.com>

Conflicts:
	src/org/isf/opd/gui/OpdEditExtended.java
	src/org/isf/operation/gui/OperationRowAdm.java

--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -190,8 +190,11 @@ angal.admission.weneed                                                          
 angal.admission.willbedeletedandhisherhistorytransferedtothepatient              = sera supprimè et son/sienne histoire transferè au Patient
 angal.admission.withthisoperationthepatient                                      = avec cette operation le Patient
 angal.admission.youareeditinganoldadmission                                      = Tu vais modifié un ancien hospitalisation
-angal.admition.check.operationdate                                               = Vérifier les dates des opérations
-angal.admtype.admissiontypebrowsing                                              = Liste typologie hospitalisation
+angal.admission.check.operationdate                                               = Vérifier les dates des opérations
+angal.admission.invalidoperationdate                                             = Date d'opération non valide:
+angal.admission.theoperationdatebetween                                          = la date de l'opération doit être comprise entre
+angal.admission.theoperationdatenewerthan                                        = la date de l'opération doit être plus récente que
+angal.admtype.admissiontypebrowsing                                              = Liste typologie hospitalisation 
 angal.admtype.codemaxchars                                                       = Code (max 10 caractère)
 angal.admtype.codetoolongmaxchars                                                = Code trop long (max 10 caractère)
 angal.admtype.deleterow                                                          = Eliminez une ligne
@@ -1150,6 +1153,8 @@ angal.opd.selectsex                                                             
 angal.opd.sex                                                                    = Sexe
 angal.opd.sexm                                                                   = SEXE
 angal.opd.visitdate                                                              = date visites
+angal.opd.nextvisitdate                                                          = Date de prochain rendez-vous
+angal.opd.notpasseddate                                                          = Vous ne pouvez pas entrer une date passée pour la prochaine visite
 angal.operation.allm                                                             = TOUS
 angal.operation.codetoolongmaxchars                                              = Code trop long (max 10 caractère)
 angal.operation.deleteoperation                                                  = Eliminez l'intervention
