--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -22,6 +22,7 @@ angal.admission.bloodtypeis                                                     
 angal.admission.bloodtypeisunknown                                               = unknown
 angal.admission.cannotmergeadmittedpatients                                      = Cannot merge admitted patients
 angal.admission.cannotmergewithpendingbills                                      = Cannot merge with pending bills
+angal.admission.check.operationdate                                              = Please check the operations dates
 angal.admission.city                                                             = City
 angal.admission.continue                                                         = Continue?
 angal.admission.controldaten2controldaten1notfound                               = Control date n.2: control date n.1 not found
@@ -69,6 +70,7 @@ angal.admission.ininserteddatepatientwasalreadyadmitted                         
 angal.admission.insurance                                                        = Insurance
 angal.admission.intheselecteddatepatientwasadmittedagain                         = in the selected date patient was admitted again, please insert a valid discharge date
 angal.admission.invalidadmissionperiod                                           = invalid admission period:  
+angal.admission.invalidoperationdate                                             = Invalid operation date:
 angal.admission.levelis                                                          = Level is 
 angal.admission.levelisunknown                                                   = Level is unknown
 angal.admission.male                                                             = Male
@@ -167,6 +169,8 @@ angal.admission.stop                                                            
 angal.admission.taxcode                                                          = Tax Number ID
 angal.admission.telephone                                                        = Telephone
 angal.admission.theadmissionbetween                                              = the admission between  \n
+angal.admission.theoperationdatebetween                                          = the operation date must be between
+angal.admission.theoperationdatenewerthan                                        = the operation date must be more recent than
 angal.admission.thepatientwasnotyetbornatselecteddate                            = The patient was not yet born at selected date!!!
 angal.admission.therapy                                                          = Therapy
 angal.admission.thereismorethanonependingbillforthispatientcontinue              = There is more than one pending bill for this patient, continue?
@@ -190,10 +194,6 @@ angal.admission.weneed                                                          
 angal.admission.willbedeletedandhisherhistorytransferedtothepatient              = will be deleted and his/her history transfered to the Patient
 angal.admission.withthisoperationthepatient                                      = With this operation the Patient
 angal.admission.youareeditinganoldadmission                                      = You are editing an old admission
-angal.admission.check.operationdate                                               = Please check the operations dates
-angal.admission.invalidoperationdate                                             = Invalid operation date:
-angal.admission.theoperationdatebetween                                          = the operation date must be between
-angal.admission.theoperationdatenewerthan                                        = the operation date must be more recent than
 angal.admtype.admissiontypebrowsing                                              = Admission type browsing
 angal.admtype.codemaxchars                                                       = Code (max 10 chars)
 angal.admtype.codetoolongmaxchars                                                = Code too long (max 10 chars)
@@ -311,6 +311,7 @@ angal.dicom.image.zoom                                                          
 angal.dicom.load.err                                                             = The file is not in DICOM format
 angal.dicom.load.txt                                                             = Load DICOM
 angal.dicom.loading                                                              = Loading...
+angal.dicom.manager.err                                                          = Generic Error
 angal.dicom.noconn                                                               = Unable to establish connection to the database
 angal.dicom.nofile                                                               = Configuration file not found
 angal.dicom.open.txt                                                             = Open DICOM
@@ -1124,8 +1125,10 @@ angal.opd.newattendance                                                         
 angal.opd.newopdregistration                                                     = New OPD registration
 angal.opd.newpatient                                                             = <enter a new patient>
 angal.opd.nextkin                                                                = Next Kin
+angal.opd.nextvisitdate                                                          = Next visit date
 angal.opd.nonote                                                                 = <none>
 angal.opd.noteandsymptom                                                         = Note & Symptom
+angal.opd.notpasseddate                                                          = You can not set a passed date for next visit
 angal.opd.notspecified                                                           = not specified
 angal.opd.on                                                                     = on
 angal.opd.opdnumber                                                              = OPD No.
@@ -1153,8 +1156,6 @@ angal.opd.selectsex                                                             
 angal.opd.sex                                                                    = Sex
 angal.opd.sexm                                                                   = SEX
 angal.opd.visitdate                                                              = Visit Date
-angal.opd.nextvisitdate                                                          = Next visit date
-angal.opd.notpasseddate                                                          = You can not set a passed date for next visit
 angal.operation.allm                                                             = ALL
 angal.operation.codetoolongmaxchars                                              = Code too long (max 10 chars)
 angal.operation.deleteoperation                                                  = Delete operation
