+ inserted properties for language with translations

--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -489,6 +489,7 @@ angal.lab.pleaseselectapatient                                                  
 angal.lab.positive                                                               = إيجابي
 angal.lab.printreport                                                            = طباعة تقرير
 angal.lab.printtable                                                             = طباعة الجدول
+angal.lab.print																	 = طباعة
 angal.lab.reactive                                                               = تفاعلي
 angal.lab.registationdate                                                        = تاريخ التسجيل
 angal.lab.result                                                                 = النتيجة
