--- a/bundle/language_de.properties
+++ b/bundle/language_de.properties
@@ -489,6 +489,7 @@ angal.lab.pleaseselectapatient                                                  
 angal.lab.positive                                                               = positiv
 angal.lab.printreport                                                            = Bericht drucken
 angal.lab.printtable                                                             = Tabelle drucken
+angal.lab.print																	 = Drucken
 angal.lab.reactive                                                               = reaktiv
 angal.lab.registationdate                                                        = Registrierungsdatum
 angal.lab.result                                                                 = Ergebnis
