--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -492,6 +492,7 @@ angal.lab.pleaseselectapatient                                                  
 angal.lab.positive                                                               = Positivo
 angal.lab.printreport                                                            = Imprimir reporte
 angal.lab.printtable                                                             = Imprimir tabla
+angal.lab.print																	 = Imprimir
 angal.lab.reactive                                                               = Reactivo
 angal.lab.registationdate                                                        = Fecha grabación
 angal.lab.result                                                                 = Resultado
