--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -492,6 +492,7 @@ angal.lab.pleaseselectapatient                                                  
 angal.lab.positive                                                               = Positif
 angal.lab.printreport                                                            = Estampage rapport
 angal.lab.printtable                                                             = Estampage tableau
+angal.lab.print																	 = Estampage
 angal.lab.reactive                                                               = Réactif
 angal.lab.registationdate                                                        = Date enregistrement
 angal.lab.result                                                                 = Résultat
