--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -492,6 +492,7 @@ angal.lab.pleaseselectapatient                                                  
 angal.lab.positive                                                               = Positivo
 angal.lab.printreport                                                            = Stampa rapporto
 angal.lab.printtable                                                             = Stampa tabella
+angal.lab.print																	 = Stampa
 angal.lab.reactive                                                               = Reattivo
 angal.lab.registationdate                                                        = Data registrazione
 angal.lab.result                                                                 = Risultato
