--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -489,6 +489,7 @@ angal.lab.pleaseselectapatient                                                  
 angal.lab.positive                                                               = sahihi
 angal.lab.printreport                                                            = Piga Chapa repoti
 angal.lab.printtable                                                             = Piga chapa mraba
+angal.lab.print																	 = Piga Chapa
 angal.lab.reactive                                                               = iko na hisia
 angal.lab.registationdate                                                        = Tarehe ya kujiandikisha
 angal.lab.result                                                                 = Matokeo
